# stm32-dma-benchmark

./: .gitignore  Cargo.toml  README.md
.cargo/: config
