[package]
name = "example-stm32f103c8"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
cortex-m-rtfm = "0.5.3"
embedded-hal = "0.2.5"
panic-semihosting = "0.5.6"
stm32f1xx-hal = { version = "0.7.0", features = ["stm32f103", "rt"] }
cortex-m-semihosting = "0.3.7"
arrayvec = { version = "0.7.1", default-features = false }

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
debug = true

[profile.dev.package."*"]
opt-level = 2
